src/objects/Platform_Event_Logger__c.object
<CustomObject>
    <fields>
        <fullName>EventMessage__c</fullName>
        <label>Event Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Object__c</fullName>
        <label>Event Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Event Logger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEL{000000}</displayFormat>
        <label>Platform Event Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>